@@ -275,6 +275,8 @@ recentchanges.rss.feed2=Recent Changes including minor changes
 recentchanges.rss.feed3=Recent Changes linking to changed version
 recentchanges.rss.feed4=Recent Changes including minor changes and linking to changed version
 recentchanges.title=Modifiche Recenti
+register.caption.accountdetails=Registrati
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Conferma la nuova password
 register.caption.displayname=Display Name
 register.caption.email=Email
