@@ -298,6 +298,8 @@ recentchanges.rss.feed2=\u6700\u8FD1\u306E\u5909\u66F4\uFF08\u4E9B\u7D30\u306A\u
 recentchanges.rss.feed3=\u6700\u8FD1\u306E\u5909\u66F4\uFF08\u5909\u66F4\u5F8C\u30D0\u30FC\u30B8\u30E7\u30F3\u3078\u306E\u30EA\u30F3\u30AF\u3064\u304D\uFF09
 recentchanges.rss.feed4=\u6700\u8FD1\u306E\u5909\u66F4\uFF08\u4E9B\u7D30\u306A\u5909\u66F4\u3092\u542B\u307F\u3001\u5909\u66F4\u5F8C\u30D0\u30FC\u30B8\u30E7\u30F3\u3078\u306E\u30EA\u30F3\u30AF\u3064\u304D\uFF09
 recentchanges.title=\u6700\u8FD1\u306E\u5909\u66F4
+register.caption.accountdetails=\u30A2\u30AB\u30A6\u30F3\u30C8\u306E\u8A73\u7D30
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=\u65B0\u3057\u3044\u30D1\u30B9\u30EF\u30FC\u30C9\u3092\u518D\u5165\u529B
 register.caption.displayname=\u8868\u793A\u540D
 register.caption.email=\u96FB\u5B50\u30E1\u30FC\u30EB
