@@ -274,6 +274,8 @@ recentchanges.rss.feed2=Recente wijzigingen inclusief kleine wijzigingen
 recentchanges.rss.feed3=Recente wijzigingen gelinkt aan de nieuwe versie
 recentchanges.rss.feed4=Recente wijzigingen inclusief kleine wijzigingen en gelinkt aan de nieuwe versie
 recentchanges.title=Recente Wijzigingen
+register.caption.accountdetails=Registreer
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Bevestig nieuw wachtwoord
 register.caption.displayname=Weergegeven naam
 register.caption.email=E-mail
