@@ -274,6 +274,8 @@ recentchanges.rss.feed2=Recent Changes including minor changes
 recentchanges.rss.feed3=Recent Changes linking to changed version
 recentchanges.rss.feed4=Recent Changes including minor changes and linking to changed version
 recentchanges.title=Nylige endringer
+register.caption.accountdetails=Registrer
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Bekreft nytt passord
 register.caption.displayname=Display Name
 register.caption.email=Email
