@@ -298,6 +298,8 @@ recentchanges.rss.feed2=Ostatnie zmiany \u0142\u0105cznie z drobnymi zmianami
 recentchanges.rss.feed3=Ostatnie zmiany zlinkowane do zmienionych wersji
 recentchanges.rss.feed4=Ostatnie zmiany \u0142\u0105cznie z drobnymi zmianami oraz zlinkowane do zmienionych wersji
 recentchanges.title=Ostatnie zmiany
+register.caption.accountdetails=Rejestracja
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Zatwierd\u017A nowe has\u0142o
 register.caption.displayname=Nazwa wy\u015Bwietlana
 register.caption.email=Email
