@@ -274,6 +274,8 @@ recentchanges.rss.feed2=Recent Changes including minor changes
 recentchanges.rss.feed3=Recent Changes linking to changed version
 recentchanges.rss.feed4=Recent Changes including minor changes and linking to changed version
 recentchanges.title=\u6700\u8FD1\u66F4\u65B0
+register.caption.accountdetails=\u8A73\u7D30\u8CC7\u6599
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=\u78BA\u8A8D\u65B0\u5BC6\u78BC
 register.caption.displayname=\u986F\u793A\u540D\u7A31
 register.caption.email=\u96FB\u5B50\u90F5\u4EF6
